--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<html>
-
-<body>
-	
-	HELLO!<br>
-	Please add this address in Cydia:<br>
-	wolfposd.github.io<br><br><br><br><br>
-
-	Last Update 26.09.2015 19:32
-
-</body>
-
-</html>
+<html><body>HELLO!<br>Please add this address in Cydia:<br>wolfposd.github.io<br><br><br><br><br>Last Update 
+2015-09-30:11:58:59
+</body></html>
