--- a/index.html
+++ b/index.html
@@ -1,3 +1,69 @@
-<html><body>HELLO!<br>Please add this address in Cydia:<br>http://wolfposd.github.io<br><br>Or <a href='cydia://url/https://cydia.saurik.com/api/share#?source=http://wolfposd.github.io'>Click Here</a><br><br><br>Last Update 
-2016-09-19_12:06:30
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>cj81499's Repo</title>
+  <base target="_top">
+  <link rel="stylesheet" type="text/css" href="./depictions/resources/css/style.css"/>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <script type="text/javascript" src="./depictions/resources/js/thankssaurik.js"></script>
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/48.png" sizes="48x48">
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/64.png" sizes="64x64">
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/128.png" sizes="128x128">
+  <link rel="icon" type="image/png" href="/depictions/resources/logo/256.png" sizes="256x256">
+  <link rel="apple-touch-icon" sizes="120x120" href="/depictions/resources/logo/120.png">
+</head>
+
+<body class="pinstripe">
+  <panel>
+
+    <block>
+      <fieldset>
+        <label>
+          <strong>Welcome to cj81499's Cydia Repo!</strong>
+        </label>
+      </fieldset>
+    </block>
+
+    <label>Do Things</label>
+    <fieldset>
+      <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io">
+        <img class="icon" src="./depictions/resources/icons/cydia.png">
+        <div>
+          <div>
+            <label>
+              <p>Add to Cydia</p>
+            </label>
+          </div>
+        </div>
+      </a>
+      <a>
+        <img class="icon" src="./depictions/resources/icons/url.png">
+        <div>
+          <div>
+            <label>
+              <p>URL</p>
+            </label>
+            <input type="text" value="https://cj81499.github.io" onclick="setSelectionRange(0,25)" style="width: 210px;">
+          </div>
+        </div>
+      </a>
+    </fieldset>
+
+    <label>Thanks</label>
+    <fieldset>
+      <div>
+        <div>
+          <label>
+            <p><a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Thanks!</p>
+          </label>
+        </div>
+      </div>
+    </fieldset>
+
+  </panel>
+</body>
+</html>
