--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>cj81499's Repo</title>
+  <title>Mordreds Repo</title>
   <base target="_top">
   <link rel="stylesheet" type="text/css" href="./depictions/resources/css/style.css"/>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -23,14 +23,14 @@
     <block>
       <fieldset>
         <label>
-          <strong>Welcome to cj81499's Cydia Repo!</strong>
+          <strong>Welcome to Mordreds Cydia Repo!</strong>
         </label>
       </fieldset>
     </block>
 
     <label>Do Things</label>
     <fieldset>
-      <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io">
+      <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://wolfposd.github.io">
         <img class="icon" src="./depictions/resources/icons/cydia.png">
         <div>
           <div>
@@ -47,21 +47,10 @@
             <label>
               <p>URL</p>
             </label>
-            <input type="text" value="https://cj81499.github.io" onclick="setSelectionRange(0,25)" style="width: 210px;">
+            <input type="text" value="https://wolfposd.github.io" onclick="setSelectionRange(0,25)" style="width: 210px;">
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Thanks</label>
-    <fieldset>
-      <div>
-        <div>
-          <label>
-            <p><a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Thanks!</p>
-          </label>
-        </div>
-      </div>
     </fieldset>
 
   </panel>
