--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mordreds Repo</title>
+  <title>wolfposd Repo</title>
   <base target="_top">
   <link rel="stylesheet" type="text/css" href="./depictions/resources/css/style.css"/>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -23,7 +23,7 @@
     <block>
       <fieldset>
         <label>
-          <strong>Welcome to Mordreds Cydia Repo!</strong>
+          <strong>Welcome to wolfposd's Cydia Repo!</strong>
         </label>
       </fieldset>
     </block>
