--- a/depictions/de.posdorfer.avatarsync/index.html
+++ b/depictions/de.posdorfer.avatarsync/index.html
@@ -79,10 +79,23 @@
           </div>
         </div>
       </a>
+    </fieldset>
 
+    <fieldset>
+      <a>
+      <img class="icon" src="../resources/icons/counter.png" width="58" height="58">
+      <div>
+        <div>
+          <label>
+            <p id="h_3202203"></p>
+          </label>
+        </div>
+      </div>
+      </a>
     </fieldset>
 
   </panel>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
+  <script type="text/javascript" id="counter" src="http://s1.freehostedscripts.net/ocount.php?site=3202203&amp;name=Visits&amp;a=1"></script>
 </body>
 </html>
